<resources>
    <string name="app_name">zarn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">zarnstudio@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="classicFullSet">Classic Full Set</string>
    <string name="hybridFullSet">Hybrid Full Set</string>
    <string name="volumeFullSet">Volume Full Set</string>
    <string name="megaVolumeFullSet">Mega Volume Full Set</string>
    <string name="touchUps">Touch Ups</string>
    <string name="removal">Removal</string>

    <string name="client_name">Client Name</string>
    <string name="client_number">Client Phone Number</string>
    <string name="dateOfBooking">Booking Date</string>
    <string name="bookButton">Confirm</string>
    <string name="action_schedule">Schedule</string>


    <string name="menu_delete">Delete</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_appointment">Appointment</string>

    <string name="ClientNameValidation">Please enter a name</string>
    <string name="ClientAddressValidation">Please enter an address</string>
    <string name="ClientNumberValidation">Please enter contact</string>
    <string name="bookingError"> Booking Error</string>
    <string name="appointment">Appointment</string>


    <string name="messageLoading">Please Wait while the bookings are Loading...</string>


    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>

    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <string name="editclientAddName">Client Name :</string>
    <string name="chosenAppointments">Appointment :</string>
    <string name="clientAddNumber">Client Number :</string>
    <string name="message">Message :</string>
</resources>