<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/scheduleFragment"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.schedule.ScheduleFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="389dp"
        android:layout_height="109dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/img" />

    </RelativeLayout>

    <EditText
        android:id="@+id/clientAddName"
        android:layout_width="410dp"
        android:layout_height="66dp"
        android:layout_margin="8dp"
        android:autofillHints=""
        android:hint="@string/client_name"
        android:inputType="text"
        android:maxLength="25"
        android:maxLines="1"
        android:padding="8dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <RadioGroup
        android:id="@+id/chosenAppointments"
        android:layout_width="400dp"
        android:layout_height="290dp"
        android:layout_below="@+id/clientAddName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.422">

        <RadioButton
            android:id="@+id/ClassicFullSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/classicFullSet" />

        <RadioButton
            android:id="@+id/HybridFullSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/hybridFullSet" />

        <RadioButton
            android:id="@+id/VolumeFullSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/volumeFullSet" />

        <RadioButton
            android:id="@+id/MegaVolumeFullSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/megaVolumeFullSet" />

        <RadioButton
            android:id="@+id/TouchUps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/touchUps" />

        <RadioButton
            android:id="@+id/Removal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/removal" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>