<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="zarnvm"
            type="org.wit.zarn.ui.detail.ScheduleDetailViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.ScheduleDetailViewModel">

        <!--        <EditText-->
<!--            android:id="@+id/editclientAddName"-->
<!--            android:layout_width="210dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginEnd="12dp"-->
<!--            android:ems="10"-->
<!--            android:inputType="number"-->
<!--            android:text="@={``+ zarnvm.observableZarn.clientAddName}"-->
<!--            android:textAlignment="viewStart"-->
<!--            android:textSize="24sp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintHorizontal_bias="1.0"-->
<!--            app:layout_constraintStart_toEndOf="@+id/textView2"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

<!--        <TextView-->
<!--            android:id="@+id/textView2"-->
<!--            android:layout_width="189dp"-->
<!--            android:layout_height="34dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginEnd="8dp"-->
<!--            android:text="@string/editclientAddName"-->
<!--            android:textAlignment="textEnd"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="24sp"-->
<!--            app:layout_constraintEnd_toStartOf="@+id/editclientAddName"-->
<!--            app:layout_constraintHorizontal_bias="1.0"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="389dp"
            android:layout_height="109dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.017" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/img" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="397dp"
            android:layout_height="119dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="8dp">

            <TextView
                android:id="@+id/editchosenAppointments"
                android:layout_width="212dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="17dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="9dp"
                android:layout_toEndOf="@+id/textView3"
                android:text="@{zarnvm.observableZarn.chosenAppointments}"
                android:textAlignment="viewStart"
                android:textColor="@color/pink"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="200dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="165dp"
                android:layout_height="66dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="27dp"
                android:text="@string/chosenAppointments"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/editchosenAppointments"
                tools:ignore="MissingConstraints" />


        </RelativeLayout>



        <Button
            android:id="@+id/editZarnButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/update"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/deleteZarnButton"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.125" />
        <Button
            android:id="@+id/deleteZarnButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editZarnButton"
            app:layout_constraintVertical_bias="0.129" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

